syntax = "proto3";

package proto;
option go_package = "aerotrack/proto";

import "google/protobuf/empty.proto";


message LocationUpdate {
    int64 vehicle_id = 1;
    string latitude = 2;
    string longitude = 3;
    double speed = 4;
    int64 timestamp = 5;
}


message VehicleStatus {
    int64 vehicle_id = 1;
    string latitude = 2;
    string longitude = 3;
    double speed = 4;
    int64 timestamp = 5;
}

message VehicleID {
    int64 vehicle_id = 1;
}


service TrackerService {
    rpc UpdateLocation(LocationUpdate) returns (google.protobuf.Empty);
    rpc GetVehicleStatus(VehicleID) returns (VehicleStatus);
}
